Bug 401582 - Download Manager stuck scanning for viruses.  r=Mardak, a=beltzner