toolkit/components/downloads/src/nsDownloadManager.cpp
@@ -663,9 +663,26 @@ nsDownloadManager::ImportDownloadHistory()
 nsresult
 nsDownloadManager::RestoreDatabaseState()
 {
-  // Convert supposedly-active downloads into downloads that should auto-resume
+  // Restore downloads that were in a scanning state.  We can assume that they
+  // have been dealt with by the virus scanner
   nsCOMPtr<mozIStorageStatement> stmt;
   nsresult rv = mDBConn->CreateStatement(NS_LITERAL_CSTRING(
+    "UPDATE moz_downloads "
+    "SET state = ?1 "
+    "WHERE state = ?2"), getter_AddRefs(stmt));
+  NS_ENSURE_SUCCESS(rv, rv);
+  
+  PRInt32 i = 0;
+  rv = stmt->BindInt32Parameter(i++, nsIDownloadManager::DOWNLOAD_FINISHED);
+  NS_ENSURE_SUCCESS(rv, rv);
+  rv = stmt->BindInt32Parameter(i++, nsIDownloadManager::DOWNLOAD_SCANNING);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  rv = stmt->Execute();
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  // Convert supposedly-active downloads into downloads that should auto-resume
+  rv = mDBConn->CreateStatement(NS_LITERAL_CSTRING(
     "UPDATE moz_downloads "
     "SET autoResume = ?1 "
     "WHERE state = ?2 "
@@ -673,7 +690,7 @@ nsDownloadManager::RestoreDatabaseState()
       "OR state = ?4"), getter_AddRefs(stmt));
   NS_ENSURE_SUCCESS(rv, rv);
 
-  PRInt32 i = 0;
+  i = 0;
   rv = stmt->BindInt32Parameter(i++, nsDownload::AUTO_RESUME);
   NS_ENSURE_SUCCESS(rv, rv);
   rv = stmt->BindInt32Parameter(i++, nsIDownloadManager::DOWNLOAD_NOTSTARTED);
