toolkit/components/downloads/test/unit/head_download_manager.js
@@ -80,11 +80,24 @@ if (!profileDir) {
   dirSvc.QueryInterface(Ci.nsIDirectoryService).registerProvider(provider);
 }
 
+
+/**
+ * Imports a download test file to use.  Works with rdf and sqlite files.
+ *
+ * @param aFName
+ *        The name of the file to import.  This file should be located in the
+ *        same directory as this file.
+ */
 function importDownloadsFile(aFName)
 {
   var file = do_get_file("toolkit/components/downloads/test/unit/" + aFName);
   var newFile = dirSvc.get("ProfD", Ci.nsIFile);
-  file.copyTo(newFile, "downloads.rdf");
+  if (/\.rdf$/i.test(aFName))
+    file.copyTo(newFile, "downloads.rdf");
+  else if (/\.sqlite$/i.test(aFName))
+    file.copyTo(newFile, "downloads.sqlite");
+  else
+    do_throw("Unexpected filename!");
 }
 
 function cleanup()
